k8s/ingress/mongo-mongoExpress/mongoExpress-deploy.yaml
# Deployment for mongo-express
apiVersion: apps/v1
kind: Deployment
metadata:
    name: mongo-express
    labels:
        app: mongo-express     
spec:
    replicas: 1
    selector:
        matchLabels:
            app: mongo-express
    template:
        metadata:
            labels:
                app: mongo-express
        spec:
            containers:
            - name: mongo-express
              image: mongo-express # To specify a version use `<imagename>:x.yy`
              ports:
              - containerPort: 8081 # Default port used by mongoExpress

---
# External Service of type Loadbalancer
apiVersion: v1
kind: Service 
metadata:
  name: external-svc-mongo-express # Name Service
spec:
  selector:
    app: mongo-express # Name Pod 
  type: LoadBalancer
  ports:
  - protocol: TCP   
    port: 8081 # Service Port
    targetPort: 8081 # Container Port
    nodePort: 30000
