k8s/ingress/mongo-mongoExpress/ingress.yaml
apiVersion: networking.k8s.io/v1
   
kind: Ingress
   
metadata:   
  name: example-ingress   
  annotations:   
    nginx.ingress.kubernetes.io/rewrite-target: /$1   
spec:   
  rules:   
    - host: sct.test   
      http:   
        paths:   
          - path: /express   
            pathType: Prefix  
            backend:   
              service:   
                name: external-svc-mongo-express    
                port:   
                  number: 8081
